--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 COPY ./ ./
 
-RUN pip3 install -r requirements.txt --no-cache-dir
+RUN pip3 install -r ./requirements.txt --no-cache-dir
 
 # COPY ./ ./
 
