--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          file: api_yamdb/
+          file: api_yamdb/Dockerfile
           push: true
           tags: alexeypetrow/api_yamdb_web:latest
 
