--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
   #       key: ${{ secrets.SSH_KEY }}
   #       passphrase: ${{ secrets.PASSPHRASE }}
   #       script: |
-  #         # Выполняет pull образа с DockerHub
+  #         # Выполняет pull образа с DockerHub.
   #         sudo docker pull alexeypetrow/infra_action
   #         #остановка всех контейнеров
   #         sudo docker stop $(sudo docker ps -a -q)
