--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -67,6 +67,8 @@ jobs:
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
           sudo docker-compose up -d
+          sudo docker-compose exec web python3 manage.py migrate
+          sudo docker-compose exec web python3 manage.py collectstatic --no-input
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
