--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -47,6 +47,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
@@ -65,6 +66,7 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
           sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
